# fancy

./: CMakeLists.txt  README.md
.cache/clangd/index/: helloworld.cpp.B99153E367D3CE26.idx  helloworld.hpp.5A6B8F36A613D6B1.idx  ipc.c.408AAC1D3F4609F5.idx  ipc.h.1A5B0D38C6D81BB5.idx  listener.c.EC74FC3887470EF1.idx  main.c.2969236F56A3B662.idx  main.cpp.27C14EF1D40B78B0.idx
include/: handlers.h  ipc.h  listener.h  logger.h  protocol.h  ui_utils.h  utils.h
src/: handlers.c  ipc.c  listener.c  logger.c  main.c  protocol.c  ui_utils.c  utils.c
